2004-01-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (shadow_unconditionally): New function...
	(handle_source_transform): ... extracted from here.
	(am_install_var): Use shadow_unconditionally to define %DISTVAR%.
	* lib/am/data.am, lib/am/java.am, lib/am/lisp.am, lib/am/python.am,
	lib/am/script.am: Add %DISTVAR% to DIST_COMMON.
	* tests/cond33.test: Make sure all conditional files are distributed.
	Report from Ralf Corsepius.

2004-01-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Append `.' to $(mkdir_p).
	* lib/install-sh: Accept `install-sh -d' with 0..n arguments,
	as well as `install-sh sources... dest' with multiple sources.
	* tests/cond33.test: New file.
	* tests/instsh2.test: Add more checks for install-sh.
	* tests/transform.test: Test for installdirs.
	* tests/Makefile.am (TESTS): Add cond33.test
	Report from Ralf Corsepius.

	* automake.in (handle_configure): Skip AC_CONFIG_LINKS items which
	do not look like DEST:SRC.
	* tests/conflnk3.test: Check for AC_CONFIG_LINKS($computed).

2004-01-07  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix for PR automake/289:
	* automake.in (Automake::Struct::libtool_tag): New attribute.  Define
	it for the language that have a Libtool tag.
	(%libtool_tags): New variable.
	(handle_languages, define_compiler_variable)
	(define_linker_variable): Pass --tag=XXX to libtool if supported.
	(scan_autoconf_traces): Scan for _LT_AC_TAGCONFIG and AC_LIBTOOL_TAGS.
	* tests/libtool3.test, tests/subobj9.test: Check that --tag=XXX is
	output.

2003-01-07  Eric Sunshine  <sunshine@sunshineco.com>  (tiny change)

	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): Add
	config.status.lineno.

2004-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* doc/automake.texi (Rebuilding): Typo.

2004-01-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/Makefile.am (dist_am_DATA): Really add inst-vars.am.

2004-01-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* THANKS: Add Bruce Korb.
