@@ -1,3 +1,8 @@
+2004-01-10  Paul Eggert  <eggert@twinsun.com>
+
+	* m4/lispdir.m4 (AM_PATH_LISPDIR): Don't use \? in sed regular
+	expressions; it doesn't conform to POSIX.
+
 2004-01-10  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (shadow_unconditionally): New function...
